--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mypackage",
+  "name": "lf-bthome-bytes",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.11.18",
+    "ts-node": "^10.9.1",
     "typescript": "^4.5.4"
   }
 }
