--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "lf-bthome-bytes",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "files": [
     "dist",
     "src"
   ],
   "scripts": {
     "start": "tsc && ts-node-esm src/index.ts",
-    "build": "tsc --module commonjs",
+    "build": "npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Anup",
