--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "lf-bthome-bytes",
-  "version": "2.0.2",
-  "description": "",
+  "name": "bthome-ts-parser",
+  "version": "2.0.3",
+  "description": "parses bthome packet returning value data",
   "main": "src/index.ts",
   "files": [
     "dist",
     "src"
   ],
   "scripts": {
-    "start": "tsc && ts-node-esm src/index.ts",
+    "start": "tsx src/index.ts",
     "build": "npx tsc",
     "test": "jest"
   },
-  "author": "Anup",
+  "author": "LightFi",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.26.10",
@@ -23,6 +23,7 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.3.2",
     "ts-node": "^10.9.1",
+    "tsx": "^4.19.4",
     "typescript": "^4.9.5"
   }
 }
